--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "ask-sage.js",
   "scripts": {
     "start": "vercel dev",
-    "build": "vercel build"
+    "build": "echo \"No build step required\""
   },
   "dependencies": {
     "openai": "^4.67.3"
