--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vercel dev"
     "start": "node server.js",
-    "build": "echo "Build complete - static files ready'",
+    "build": "echo 'Build complete'
     "dev": "live-server --port=3000 --host=0.0.0.0"
   },
   "dependencies": {
