--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "description": "Legal self-representation education platform",
   "main": "ask-sage.js",
   "scripts": {
-    "start": "vercel dev"
-    "start": "node server.js",
-    "build": "echo 'Build complete - static files ready'",
-    "dev": "live-server --port=3000 --host=0.0.0.0"
+    "start": "vercel dev",
+    "build": "echo No build step required"
   },
   "dependencies": {
     "openai": "^4.67.3"
