--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.0.0",
   "type": "module",
   "description": "Legal self-representation education platform",
-  "main": "ask-sage.js",
+  "main": "index.html",
   "scripts": {
-    "start": "vercel dev",
-    "build": "echo No build step required"
+    "start": "node server.js",
+    "build": "echo 'Build complete - static files ready'"
   },
   "dependencies": {
     "openai": "^4.67.3"
