--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,24 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js":  { "runtime": "nodejs20.x" },
-    "api/**/*.mjs": { "runtime": "nodejs20.x" }
-  },
-  "headers": [
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin",  "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
-      ]
+      "src": "api/ask-sage.js",
+      "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "functions": {
+    "api/ask-sage.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
