--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,20 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "builds": [
-    {
-      "src": "api/ask-sage.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
   "functions": {
-    "api/ask-sage.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+    "api/**/*.js":  { "runtime": "nodejs20.x", "maxDuration": 30 },
+    "api/**/*.mjs": { "runtime": "nodejs20.x", "maxDuration": 30 }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin",  "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    },
+    { "source": "/",        "headers": [ { "key": "Cache-Control", "value": "no-store, max-age=0" } ] },
+    { "source": "/(.*).html","headers": [ { "key": "Cache-Control", "value": "no-store, max-age=0" } ] }
+  ]
 }
