--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,8 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "builds": [
-    {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/**/*",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/index.ts"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/$1"
-    }
-  ],
-  "env": {
-    "OPENAI_API_KEY": "@openai_api_key"
+  "functions": {
+    "api/**/*.js":  { "runtime": "nodejs20.x", "maxDuration": 30 },
+    "api/**/*.mjs": { "runtime": "nodejs20.x", "maxDuration": 30 }
   }
 }
